--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Developer Portfolio</title>
-
+    <!-- ! The link of google font I used
+ -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -17,10 +18,36 @@
   </head>
   <body>
     <div>
+    <!-- !DIV -->
+    <div>
       <h1>Welcome to the world of coding with</h1>
     </div>
+    <!-- !DIV -->
     <div>
-      <h1>CODE THE NEW ME <span>(CDNM)</span></h1>
+      <h1 id="cdnm">CODE THE NEW ME <span>(CDNM)</span></h1>
+    </div>
+    <!-- !DIV -->
+    <div>
+      <h4>An IT enthusiast who is learning to CODE the New ME</h4>
+    </div>
+    <div>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab laboriosam
+        dolorum quas ad doloremque fuga recusandae illo aliquam numquam.
+        Inventore doloremque numquam adipisci recusandae expedita ducimus alias
+        qui quis consequuntur dolorem. Distinctio dolor autem eius numquam
+        possimus eaque eos aperiam voluptatibus quisquam culpa, aut veritatis
+        magni ab incidunt dolores, qui provident esse cum tempore officiis. Modi
+        animi deleniti dicta aspernatur expedita corrupti architecto,
+        consequuntur alias temporibus, excepturi praesentium ipsa nam ipsam est
+        rerum cumque laborum, labore dolorum sunt doloribus! Praesentium neque
+        expedita sapiente! Amet sunt, quia sequi minus, numquam temporibus vel
+        eveniet culpa corporis sed earum, nesciunt quae quasi natus.
+      </p>
+    </div>
+    <div>
+    </div>
+      <img src="./images/my-bg-final.png" alt="">
     </div>
   </body>
 </html>
