--- a/index.html
+++ b/index.html
@@ -17,37 +17,45 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <div>
-    <!-- !DIV -->
-    <div>
-      <h1>Welcome to the world of coding with</h1>
-    </div>
-    <!-- !DIV -->
-    <div>
-      <h1 id="cdnm">CODE THE NEW ME <span>(CDNM)</span></h1>
-    </div>
-    <!-- !DIV -->
-    <div>
-      <h4>An IT enthusiast who is learning to CODE the New ME</h4>
-    </div>
-    <div>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab laboriosam
-        dolorum quas ad doloremque fuga recusandae illo aliquam numquam.
-        Inventore doloremque numquam adipisci recusandae expedita ducimus alias
-        qui quis consequuntur dolorem. Distinctio dolor autem eius numquam
-        possimus eaque eos aperiam voluptatibus quisquam culpa, aut veritatis
-        magni ab incidunt dolores, qui provident esse cum tempore officiis. Modi
-        animi deleniti dicta aspernatur expedita corrupti architecto,
-        consequuntur alias temporibus, excepturi praesentium ipsa nam ipsam est
-        rerum cumque laborum, labore dolorum sunt doloribus! Praesentium neque
-        expedita sapiente! Amet sunt, quia sequi minus, numquam temporibus vel
-        eveniet culpa corporis sed earum, nesciunt quae quasi natus.
-      </p>
-    </div>
-    <div>
-    </div>
-      <img src="./images/my-bg-final.png" alt="">
-    </div>
+    <section>
+      <div class="basic-width">
+        <div>
+          <h1>Welcome to the world of coding with</h1>
+        </div>
+
+        <div>
+          <h1 id="cdnm">CODE THE NEW ME <span>(CDNM)</span></h1>
+        </div>
+
+        <div>
+          <h4>An IT enthusiast who is learning to CODE the New ME</h4>
+        </div>
+        <div>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab
+            laboriosam dolorum quas ad doloremque fuga recusandae illo aliquam
+            numquam. Inventore doloremque numquam adipisci recusandae expedita
+            ducimus alias qui quis consequuntur dolorem. Distinctio dolor autem
+            eius numquam possimus eaque eos aperiam voluptatibus quisquam culpa,
+            aut veritatis magni ab incidunt dolores, qui provident esse cum
+            tempore officiis. Modi animi deleniti dicta aspernatur expedita
+            corrupti architecto, consequuntur alias temporibus, excepturi
+            praesentium ipsa nam ipsam est rerum cumque laborum, labore dolorum
+            sunt doloribus! Praesentium neque expedita sapiente! Amet sunt, quia
+            sequi minus, numquam temporibus vel eveniet culpa corporis sed
+            earum, nesciunt quae quasi natus.
+          </p>
+          <div>
+            <a class="hire-me" target="blank" href="https://www.google.de/"
+              >HIRE ME</a
+            >
+          </div>
+        </div>
+      </div>
+
+      <div class="basic-width">
+        <img src="./images/my-bg-final.png" alt="My Portfolio Image" />
+      </div>
+    </section>
   </body>
 </html>
