--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <section>
+    <section class="top-banner">
       <div class="basic-width">
         <div>
           <h1>Welcome to the world of coding with</h1>
@@ -52,6 +52,7 @@
           </div>
         </div>
       </div>
+      <!-- ! -->
 
       <div class="basic-width">
         <img src="./images/my-bg-final.png" alt="My Portfolio Image" />
