--- a/index.html
+++ b/index.html
@@ -52,11 +52,13 @@
           </div>
         </div>
       </div>
-      <!-- ! -->
+      <!-- ! image -->
 
       <div class="basic-width">
         <img src="./images/my-bg-final.png" alt="My Portfolio Image" />
       </div>
     </section>
+    <!-- ! Bottom-banner -->
+    <section class="bottom-banner"></section>
   </body>
 </html>
