--- a/index.html
+++ b/index.html
@@ -59,6 +59,38 @@
       </div>
     </section>
     <!-- ! Bottom-banner -->
-    <section class="bottom-banner"></section>
+    <section class="bottom-banner">
+      <div class="basic-width">
+        <img src="./images/keep-moving.png" alt="Pro image-2" />
+      </div>
+
+      <div class="basic-width">
+        <h1>KEEP MOVING</h1>
+
+        <h4>
+          It's not about how many times you fall down, it's always about how
+          many times you get up...
+        </h4>
+
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus id at
+          eaque sunt ea inventore, aut dolore est distinctio blanditiis, tempore
+          quibusdam placeat consequatur quis cumque commodi omnis! Soluta
+          praesentium porro hic tempora nisi reiciendis. Optio alias at incidunt
+          et assumenda possimus tempore ipsam, quibusdam autem obcaecati
+          consectetur esse voluptatum laudantium rem hic, quod nulla sed itaque.
+          Ducimus ipsam, libero commodi repellat suscipit pariatur rem quis nisi
+          dignissimos, voluptate dicta. At facere quaerat, necessitatibus ea
+          explicabo quia delectus quasi dolores eveniet obcaecati molestiae
+          laudantium eum iste nostrum fugiat, voluptate voluptates optio.
+          Laborum doloremque aperiam inventore blanditiis, quisquam nisi maxime
+          qui.
+        </p>
+
+        <a class="hire-me" target="blank" href="https://www.google.de/"
+          >DOWNLOAD RESUME
+        </a>
+      </div>
+    </section>
   </body>
 </html>
