--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <section class="top-banner">
+    <section class="top-banner flexible-container">
       <div class="basic-width">
         <div>
           <h1>Welcome to the world of coding with</h1>
         </div>
 
         <div>
-          <h1 id="cdnm">CODE THE NEW ME <span>(CDNM)</span></h1>
+          <h1 class="cdnm">CODE THE NEW ME <span>(CDNM)</span></h1>
         </div>
 
         <div>
@@ -59,7 +59,7 @@
       </div>
     </section>
     <!-- ! Bottom-banner -->
-    <section class="bottom-banner">
+    <section class="bottom-banner flexible-container">
       <div class="basic-width">
         <img src="./images/keep-moving.png" alt="Pro image-2" />
       </div>
@@ -93,5 +93,53 @@
       </div>
     </section>
     <!-- ! Experience Section -->
+    <section class="experience">
+      <div>
+        <h1>EXPERIENCES</h1>
+      </div>
+      <div class="box">
+      <!-- First part -->
+      <div class="flexible-container"> 
+        <div class="box-item">
+          <h1>Learning Web Development</h1>
+          <h3 class="cdnm">2022 is the the begining of the journey</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum
+            voluptas repellendus unde tempore molestiae laborum a. Pariatur, sit
+            enim neque ea quia ab aliquid provident fuga iure nesciunt dolor
+            aliquam doloribus quod culpa dignissimos consectetur. Dolor
+            doloribus magnam itaque aliquid quam accusamus veniam dolorum
+            molestiae, possimus nisi sapiente sint harum ipsum fugit ad! Quia
+            facere accusantium id. Nesciunt, culpa! Deserunt excepturi
+            accusantium quisquam minima nesciunt officiis repudiandae dolorem
+            minus veritatis maiores praesentium repellat, exercitationem iste
+            rem aperiam asperiores velit fugit. Ipsum, aliquid maxime neque
+            reprehenderit omnis itaque odio architecto voluptates libero.
+            Veritatis aliquam tempore provident illum dolorum rem. Maiores,
+            tempore?
+          </p>
+        </div>
+        <!-- Second part -->
+        <div class="box-item">
+          <h1>Will join the Main Stream</h1>
+          <h3 class="cdnm">2023 will be the year to PROVE</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium
+            fugiat delectus reiciendis omnis impedit qui expedita porro unde
+            eum? Eligendi ipsum cupiditate architecto dicta tenetur, corrupti
+            consequatur? Rerum quasi alias porro enim eveniet cumque iusto.
+            Pariatur temporibus dolore doloribus error incidunt animi, vero
+            consequuntur, officiis inventore quos ut quam fugiat ullam nesciunt
+            eos a, praesentium harum perferendis laborum obcaecati eligendi
+            exercitationem repudiandae nisi. Eius dolor rerum placeat aliquam
+            aperiam nihil asperiores obcaecati nemo, omnis mollitia ipsam totam
+            eum aut dicta molestiae impedit, assumenda laboriosam itaque
+            facilis. Iure facilis molestiae nesciunt odio, sit dolore nam
+            voluptatem accusantium atque, enim excepturi laborum?
+          </p>
+        </div>
+      </div>
+      </div>
+    </section>
   </body>
 </html>
