--- a/index.html
+++ b/index.html
@@ -94,13 +94,13 @@
     </section>
     <!-- ! Experience Section -->
     <section class="experience">
-      <div>
+      <div id="experience">
         <h1>EXPERIENCES</h1>
       </div>
       <div class="box">
       <!-- First part -->
       <div class="flexible-container"> 
-        <div class="box-item">
+        <div id="box1-border" class="box-item">
           <h1>Learning Web Development</h1>
           <h3 class="cdnm">2022 is the the begining of the journey</h3>
           <p>
@@ -120,7 +120,7 @@
           </p>
         </div>
         <!-- Second part -->
-        <div class="box-item">
+        <div id="box2-border" class="box-item">
           <h1>Will join the Main Stream</h1>
           <h3 class="cdnm">2023 will be the year to PROVE</h3>
           <p>
