--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
       </div>
     </section>
     <!-- ! Experience Section -->
-    <section class="experience">
+    <section class="experience-container">
       <div id="experience">
         <h1>EXPERIENCES</h1>
       </div>
@@ -141,5 +141,8 @@
       </div>
       </div>
     </section>
+    <footer>
+      <p>&copy Code The New Me 2022, a CDNM project </p>
+    </footer>
   </body>
 </html>
