--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <!-- ! image -->
 
       <div class="basic-width">
-        <img src="./images/my-bg-final.png" alt="My Portfolio Image" />
+        <img src="./images/my-bg copy.png" alt="My Portfolio Image" />
       </div>
     </section>
     <!-- ! Bottom-banner -->
