--- a/index.html
+++ b/index.html
@@ -55,13 +55,13 @@
       <!-- ! image -->
 
       <div class="basic-width">
-        <img src="./images/my-bg copy.png" alt="My Portfolio Image" />
+        <img src="./images/1stProPhoto.png" alt="My Portfolio Image" />
       </div>
     </section>
     <!-- ! Bottom-banner -->
     <section class="bottom-banner flexible-container">
       <div class="basic-width">
-        <img src="./images/keep-moving.png" alt="Pro image-2" />
+        <img src="./images/2ndProPhoto.png" alt="Pro image-2" />
       </div>
 
       <div class="basic-width">
